--- a/styles/components/_buttons.scss
+++ b/styles/components/_buttons.scss
@@ -1,279 +1,103 @@
-// Reusable styles that can be reused by various elements or components
-// https://sass-lang.com/documentation/style-rules/placeholder-selectors/
-%button-focus-state {
-    border-radius: var(--Corner-radius-Round, 999px);
-    border: var(--Stroke-weight-Button-stroke, 2px) solid
-        var(--Stroke-Secondary, #999);
-    background: var(--Background-Light-Primary, #fff);
-    box-shadow: 0px 0px 0px 2px #fff,
-        0px 0px 0px 4px var(--Stroke-Focus, #b53cde);
-    outline: none;
-}
-
-/*
-    My preferences of class naming is using BEM https://getbem.com/introduction/
-    In this case of a button will be:
-
-    BASE
-    .button (base style. Padding, margin, etc)
-
-    MODIFIER
-    .button--[modifier] (expanding on base style and add it's own style. IE colour, extra padding, etc)
-    IE .button--primary
-
-    STATE
-    .button--is-[state] (for specific style related state NOT hover, focus, etc)
-    IE .button--is-hidden, .button--primary-is-visible
-*/
+@use '../settings' as *;
 
 .button {
-    /* Secondary Button: Large */
-    &.secondary {
-        display: inline-flex;
-        justify-content: center;
-        align-items: center;
-        gap: var(--Spacing-Spacing-200, 8px);
-        padding: var(--Spacing-Spacing-400, 16px)
-            var(--Spacing-Spacing-600, 32px);
+  @include elevation-2;
+  border-radius: $border-round;
+  text-decoration: none;
+  text-align: center;
+  position: relative;
+  font-size: 20px;
+  padding: $spacing-400 $spacing-600;
+  font-style: normal;
+  transition: all 0.2s ease-in-out;
 
-        font-family: var(
-            --Typography-Font-family-Primary-font,
-            'Atkinson Hyperlegible Next'
-        );
-        font-size: var(--Typography-Sizes-Components-Button-default, 20px);
-        font-style: normal;
-        font-weight: var(--Typography-Font-weight-Regular, 400);
-        line-height: 24px; /* 120% */
-        letter-spacing: var(--Typography-Spacing-Character-Default, 0px);
-        text-align: center;
-        color: var(--Text-Dark-Secondary, #666);
+  &.small {
+    padding: $spacing-300 $spacing-500;
+    font-size: 16px;
+  }
 
-        text-decoration: none;
-        border-radius: var(--Corner-radius-Round, 999px);
-        border: var(--Stroke-weight-Button-stroke, 2px) solid
-            var(--Stroke-Secondary, #999);
-        background: transparent;
+  &:focus {
+    box-shadow: 0 0 0 2px $color-white, 0 0 0 4px $color-focus-state;
+    outline: 3px solid transparent;
+  }
 
-        transition: all 0.25s ease;
-        cursor: pointer;
+  /*
+    PRIMARY
+  */
+  &.primary {
+    background-image: $color-primary-animated;
+    color: $color-white;
+    z-index: 1;
 
-        &:hover {
-            border-color: var(--Stroke-Primary, #333);
-            background: var(--Background-Light-Primary, #fff);
-            color: var(--Stroke-Primary, #333);
-        }
-
-        &:active {
-            border-color: var(--Stroke-Accent, #017ac9);
-            background: var(--Background-Light-Primary, #fff);
-            color: var(--Stroke-Accent, #017ac9);
-            transform: scale(0.98);
-        }
-
-        &:focus {
-            @extend %button-focus-state;
-        }
-
-        /* Secondary Button: Small */
-        &.small {
-            display: inline-flex;
-            justify-content: center;
-            align-items: center;
-            gap: var(--Spacing-Spacing-200, 8px);
-            padding: var(--Spacing-Spacing-300, 12px)
-                var(--Spacing-Spacing-500, 24px);
-
-            font-family: var(
-                --Typography-Font-family-Primary-font,
-                'Atkinson Hyperlegible Next'
-            );
-            font-size: var(--Typography-Sizes-Components-Button-default, 20px);
-            font-style: normal;
-            font-weight: var(--Typography-Font-weight-Regular, 400);
-            line-height: 24px;
-            letter-spacing: var(--Typography-Spacing-Character-Default, 0px);
-            text-align: center;
-            color: var(--Text-Dark-Secondary, #666);
-
-            text-decoration: none;
-            border-radius: var(--Corner-radius-Round, 999px);
-            border: var(--Stroke-weight-Button-stroke, 2px) solid
-                var(--Stroke-Secondary, #999);
-            background: var(--Background-Light-Primary, #fff);
-
-            transition: all 0.25s ease;
-            cursor: pointer;
-        }
-
-        &:hover {
-            border-color: var(--Stroke-Primary, #333);
-            color: var(--Stroke-Primary, #333);
-        }
-
-        &:active {
-            border-color: var(--Stroke-Accent, #017ac9);
-            color: var(--Stroke-Accent, #017ac9);
-            transform: scale(0.98);
-        }
-
-        &:focus {
-            @extend %button-focus-state;
-        }
+    &::after {
+      transition: opacity 0.2s ease-in-out;
+      border-radius: $border-round;
+      position: absolute;
+      content: '';
+      display: block;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      background-image: $color-gradient-blue;
+      z-index: -1;
+      opacity: 0;
     }
 
-    /* Primary Button: Large */
-    &.primary {
-        display: inline-flex;
-        justify-content: center;
-        align-items: center;
-        gap: var(--Spacing-Spacing-200, 8px);
-        padding: var(--Spacing-Spacing-400, 16px)
-            var(--Spacing-Spacing-600, 32px);
-
-        font-family: var(
-            --Typography-Font-family-Primary-font,
-            'Atkinson Hyperlegible Next'
-        );
-        font-size: var(--Typography-Sizes-Components-Button-default, 20px);
-        font-style: normal;
-        font-weight: var(--Typography-Font-weight-Regular, 400);
-        line-height: 24px;
-        letter-spacing: var(--Typography-Spacing-Character-Default, 0px);
-        text-align: center;
-        text-decoration: none;
-        color: #fff;
-
-        border-radius: var(--Corner-radius-Round, 999px);
-        background: var(--Background-Dark-Accent, #017ac9);
-        box-shadow: var(--Elevation-Position-X-Level-2, 0px)
-            var(--Elevation-Position-Y-Level-2, 4px)
-            var(--Elevation-Blur-Level-2, 8px)
-            var(--Elevation-Spread-Level-2, 0px) rgba(0, 0, 0, 0.2);
-
-        border: none;
-        cursor: pointer;
-        transition: background 0.25s ease, box-shadow 0.25s ease,
-            transform 0.1s ease;
-
-        &:hover {
-            border-radius: var(--Corner-radius-Round, 999px);
-            background: var(
-                --Gradient-Blue,
-                linear-gradient(
-                    135deg,
-                    var(--Brand-MSD-Blue, #017ac9) 25%,
-                    var(--Brand-MSD-Navy, #134276) 100%
-                )
-            );
-            box-shadow: var(--Elevation-Position-X-Level-3, 0px)
-                var(--Elevation-Position-Y-Level-3, 8px)
-                var(--Elevation-Blur-Level-3, 16px)
-                var(--Elevation-Spread-Level-3, 0px) rgba(0, 0, 0, 0.2);
-        }
-
-        &:active {
-            border-radius: var(--Corner-radius-Round, 999px);
-            background: var(--Background-Dark-Dark, #134276);
-            transform: scale(0.98);
-        }
-
-        &:focus {
-            border-radius: var(--Corner-radius-Round, 999px);
-            background: var(--Background-Dark-Dark, #134276);
-            outline: none;
-        }
-
-        /* Primary Button: Small */
-        &.small {
-            display: inline-block;
-            font-family: var(
-                --Typography-Font-family-Primary-font,
-                'Atkinson Hyperlegible Next'
-            );
-            font-size: var(--Typography-Sizes-Components-Button-default, 20px);
-            font-style: normal;
-            font-weight: var(--Typography-Font-weight-Regular, 400);
-            line-height: 24px;
-            letter-spacing: var(--Typography-Spacing-Character-Default, 0px);
-            text-align: center;
-            text-decoration: none;
-
-            padding: var(--Spacing-Spacing-300, 12px)
-                var(--Spacing-Spacing-500, 24px);
-            border-radius: var(--Corner-radius-Round, 9999px);
-            background-color: var(--color-primary-dark, #003f7f);
-            color: #fff;
-
-            border: none;
-            cursor: pointer;
-            transition: background-color 0.25s ease, box-shadow 0.2s ease,
-                transform 0.1s ease;
-
-            &:hover {
-                box-shadow: var(--elevation-2, 0px 4px 6px rgba(0, 0, 0, 0.1));
-                transition: background-color 0.25s ease, box-shadow 0.25s ease,
-                    transform 0.1s ease;
-            }
-
-            &:focus {
-                outline: none;
-            }
-
-            &:active {
-                transform: scale(0.98);
-            }
-        }
+    &:hover {
+      &::after {
+        opacity: 1;
+      }
     }
+
+    &:active {
+      background: $color-primary-navy;
+    }
+  }
+
+  /*
+    HOLLOW
+  */
+  &.hollow,
+  &.secondary {
+    color: $text-primary;
+    border: 2px solid $stroke-secondary;
+
+    &:hover {
+      border-color: $stroke-primary;
+    }
+
+    &:active {
+      border: 2px solid $stroke-accent;
+    }
+  }
 }
 
-.button-icon-primary {
-    /* Primary Icon Button: Large */
-    &.large {
-        display: inline-flex;
-        min-width: 1440px;
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 40px;
-        border-radius: var(--Corner-radius-Large, 16px);
-        background: var(--Greys-White, #fff);
+.link {
+  color: $color-primary;
+  box-shadow: none;
+  text-decoration: none;
+  transition: all 0.2s ease-in-out;
+
+  &:hover,
+  &:active {
+    color: $color-primary-navy;
+  }
+
+  &:visited {
+    color: $color-primary;
+
+    &:hover,
+    &:active {
+      color: $color-primary-navy;
     }
+  }
 
-    /* Primary Icon Button: Small */
-    &.small {
-        display: flex;
-        width: 44px;
-        height: 44px;
-        justify-content: center;
-        align-items: center;
-        flex-shrink: 0;
-        aspect-ratio: 1 / 1;
-        border-radius: var(--Corner-radius-Round, 999px);
-        background: var(--Background-Dark-Accent, #017ac9);
-        box-shadow: var(--Elevation-Position-X-Level-2, 0px)
-            var(--Elevation-Position-Y-Level-2, 4px)
-            var(--Elevation-Blur-Level-2, 8px)
-            var(--Elevation-Spread-Level-2, 0px) rgba(0, 0, 0, 0.2);
-        transition: background 0.25s ease, box-shadow 0.25s ease,
-            transform 0.1s ease;
+  &.small {
+    font-size: 16px;
+  }
 
-        &:hover {
-            background: var(
-                --Gradient-Blue,
-                linear-gradient(
-                    135deg,
-                    var(--Brand-MSD-Blue, #017ac9) 25%,
-                    var(--Brand-MSD-Navy, #134276) 100%
-                )
-            );
-            box-shadow: var(--Elevation-Position-X-Level-3, 0px)
-                var(--Elevation-Position-Y-Level-3, 8px)
-                var(--Elevation-Blur-Level-3, 16px)
-                var(--Elevation-Spread-Level-3, 0px) rgba(0, 0, 0, 0.2);
-        }
-
-        &:active {
-            background: var(--Background-Dark-Dark, #134276);
-            transform: scale(0.95);
-        }
-    }
+  &.large {
+    font-size: 20px;
+  }
 }
