--- a/blocks/form/components/formhero/formhero.scss
+++ b/blocks/form/components/formhero/formhero.scss
@@ -1,9 +1,18 @@
 @use '../../../../styles/settings' as *;
 
+%common-panel-spacing {
+  margin: 32px 0;
+  padding: 0 16px;
+
+  @include media('desktop') {
+    padding: 60px 0;
+  }
+}
+
 .wizard {
   // Specificity
   .panel-heroform {
-    margin: 32px 16px;
+    @extend %common-panel-spacing;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -11,7 +20,6 @@
 
     @include media('desktop') {
       flex-direction: row;
-      padding: 60px 0;
       text-align: left;
       justify-content: space-between;
       width: 100%;
@@ -23,6 +31,7 @@
   .panel-heroform__picture {
     width: 100%;
     max-width: 160px;
+    margin-bottom: 32px;
 
     @include media('desktop') {
       max-width: 240px;
@@ -33,10 +42,12 @@
   .panel-heroform__content {
     h2 {
       @include heading-level-1;
+      margin-bottom: $spacing-500;
     }
 
     p {
       @include font-body-large;
+      margin-bottom: 12px;
     }
 
     @include media('desktop') {
