--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -13,6 +13,7 @@ h5,
 h6 {
   font-family: $font-family;
   font-weight: 700;
+  margin: 0;
 }
 
 h1 {
@@ -41,6 +42,7 @@ h6 {
 
 p {
   @include font-body-default;
+  margin: 0;
 }
 
 .subtitle {
