Final commit before moving to frontend branch

--- a/styles/base/_buttons.scss
+++ b/styles/base/_buttons.scss
@@ -11,7 +11,7 @@
     font-family: var(--Typography-Font-family-Primary-font, 'Atkinson Hyperlegible Next');
     font-size: var(--Typography-Sizes-Components-Button-default, 20px);
     font-style: normal;
-    font-weight: var(--Typography-Font-weight-Regular, 400);
+    //font-weight: var(--Typography-Font-weight-Regular, 400);
     line-height: 24px;
     letter-spacing: var(--Typography-Spacing-Character-Default, 0px);
     text-align: center;
