--- a/styles/base/_wizard-buttons.scss
+++ b/styles/base/_wizard-buttons.scss
@@ -50,7 +50,8 @@
   color: #fff;
 
   border-radius: var(--Corner-radius-Round, 999px);
-  background: var(--Background-Dark-Accent, #017ac9);
+  //background: var(--Background-Dark-Accent, #017ac9);
+  background: red;
   box-shadow: var(--Elevation-Position-X-Level-2, 0px)
     var(--Elevation-Position-Y-Level-2, 4px) var(--Elevation-Blur-Level-2, 8px)
     var(--Elevation-Spread-Level-2, 0px) rgba(0, 0, 0, 0.2);
