--- a/blocks/form/components/formwelcome/formwelcome.scss
+++ b/blocks/form/components/formwelcome/formwelcome.scss
@@ -8,10 +8,19 @@
     margin: 32px auto;
 
     @include media('desktop') {
+      max-width: 1100px;
     }
 
     legend {
       display: none;
+    }
+
+    .panel-formwelcome__container {
+      @include media('desktop') {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+      }
     }
 
     .panel-formwelcome__item {
@@ -21,13 +30,25 @@
 
       &:not(:last-child) {
         margin-bottom: $spacing-500;
+
+        @include media('desktop') {
+          margin-bottom: $spacing-600;
+        }
       }
     }
 
     .panel-formwelcome__header {
+      @include media('desktop') {
+        max-width: 513px;
+      }
+
       h2 {
         @include heading-level-3;
         margin-bottom: 32px;
+
+        @include media('desktop') {
+          @include heading-level-1;
+        }
       }
     }
 
@@ -37,8 +58,27 @@
       order: 1;
     }
 
+    .panel-formwelcome__content-container {
+      @include media('desktop') {
+        width: 100%;
+        max-width: 511px;
+      }
+    }
+
     .panel-formwelcome__item-content {
+      @include media('desktop') {
+        max-width: 390px;
+      }
+
       h3 {
+        @include font-body-large;
+
+        @include media('desktop') {
+          @include heading-level-6;
+        }
+      }
+
+      p {
         @include font-body-large;
       }
     }
