--- a/blocks/form/components/wizard/wizard.scss
+++ b/blocks/form/components/wizard/wizard.scss
@@ -22,7 +22,7 @@
   @extend %common-panel-spacing;
 
   .current-wizard-step {
-    padding: 0 16px;
+    padding: 32px 16px 45px;
 
     @include media('desktop') {
       padding: 60px 0;
