feat(form): checkbox input

--- a/styles/settings/_colors.scss
+++ b/styles/settings/_colors.scss
@@ -30,6 +30,10 @@ $color-feedback-orange: #fa7f14;
 $color-feedback-red: #d03633;
 $color-feedback-pink: #b53cde;
 
+// Shades Navy
+$color-shade-navy-30: #bcccdb;
+$color-shade-navy-45: #95aac1;
+
 // To animate button background colour
 $color-primary-animated: linear-gradient(
   0,
