--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -107,7 +107,7 @@ h6 {
    Form Typography (AEM Forms)
 ------------------------------ */
 
-main .form label,
+// main .form label,
 main .form fieldset.checkbox-group-wrapper legend,
 main .form fieldset.radio-group-wrapper legend {
   font-weight: var(--form-label-font-weight);
@@ -115,41 +115,32 @@ main .form fieldset.radio-group-wrapper legend {
   color: var(--Text-Dark-Secondary, #666);
 }
 
-main .form .field-label {
-  --form-label-color: var(--Text-Dark-Primary, #333);
-  color: var(--form-label-color);
-  $font-family: 'Atkinson Hyperlegible Next', sans-serif;
-  font-size: var(--Typography-Sizes-Components-Label, 20px);
-  font-style: normal;
-  font-weight: var(--Typography-Font-weight-Medium, 500);
-  line-height: 24px;
-  letter-spacing: var(--Typography-Spacing-Character-Default, 0px);
-}
+// main .form .field-label {
+// --form-label-color: var(--Text-Dark-Primary, #333);
+// color: var(--form-label-color);
+// $font-family: 'Atkinson Hyperlegible Next', sans-serif;
+// font-size: var(--Typography-Sizes-Components-Label, 20px);
+// font-style: normal;
+// font-weight: var(--Typography-Font-weight-Medium, 500);
+// line-height: 24px;
+// letter-spacing: var(--Typography-Spacing-Character-Default, 0px);
+// }
 
-main .form input,
-main .form textarea,
-main .form select {
-  background-color: var(--form-input-background-color);
-  border: var(--form-input-border-size) solid var(--form-input-border-color);
-  width: 100%;
-  height: 2.625rem;
-  color: var(--Text-Dark-Secondary, #666);
-  padding: var(--form-input-padding);
-  font-size: var(--Typography-Sizes-Components-Input-text, 20px);
-  max-width: unset;
-  margin-top: 0.5rem;
-  margin-bottom: 1rem;
-  border-radius: 0.25rem;
-
-  overflow: hidden;
-  text-overflow: ellipsis;
-
-  $font-family: 'Atkinson Hyperlegible Next', sans-serif;
-  font-style: normal;
-  font-weight: var(--Typography-Font-weight-Regular, 400);
-  line-height: 24px;
-  letter-spacing: var(--Typography-Spacing-Character-Default, 0px);
-}
+// main .form input,
+// main .form textarea,
+// main .form select {
+//   background-color: var(--form-input-background-color);
+//   border: var(--form-input-border-size) solid var(--form-input-border-color);
+//   width: 100%;
+//   height: 2.625rem;
+//   color: var(--Text-Dark-Secondary, #666);
+//   padding: var(--form-input-padding);
+//   font-size: var(--Typography-Sizes-Components-Input-text, 20px);
+//   max-width: unset;
+//   margin-top: 0.5rem;
+//   margin-bottom: 1rem;
+//   border-radius: 0.25rem;
+// }
 
 main .form input.is-filled,
 main .form textarea.is-filled {
