--- a/styles/components/_buttons.scss
+++ b/styles/components/_buttons.scss
@@ -10,7 +10,7 @@
 
   &::after {
     transition: opacity 0.2s ease-in-out;
-    border-radius: $border-round;
+    border-radius: $border-radius-round;
     position: absolute;
     content: '';
     display: block;
@@ -70,7 +70,7 @@
 %button,
 .button {
   @include elevation-2;
-  border-radius: $border-round;
+  border-radius: $border-radius-round;
   text-decoration: none;
   text-align: center;
   position: relative;
