--- a/styles/settings/_borders.scss
+++ b/styles/settings/_borders.scss
@@ -1,6 +1,6 @@
-$border-none: 0;
-$border-low: 4px;
-$border-mid: 8px;
-$border-large: 16px;
-$border-huge: 32px;
-$border-round: 999px;
+$border-radius-none: 0;
+$border-radius-low: 4px;
+$border-radius-mid: 8px;
+$border-radius-large: 16px;
+$border-radius-huge: 32px;
+$border-radius-round: 999px;
