--- a/styles/base/_elements.scss
+++ b/styles/base/_elements.scss
@@ -71,6 +71,11 @@ button {
     box-shadow: 0 0 0 2px $color-white, 0 0 0 4px $color-focus-state;
     outline: 3px solid transparent;
   }
+
+  &:active:focus {
+    box-shadow: none;
+    outline: none;
+  }
 }
 
 a {
