--- a/styles/base/_elements.scss
+++ b/styles/base/_elements.scss
@@ -63,19 +63,10 @@ picture {
 
 a,
 button {
+  @extend %state-focus;
   display: inline-block;
   cursor: pointer;
   font-weight: 400;
-
-  &:focus {
-    box-shadow: 0 0 0 2px $color-white, 0 0 0 4px $color-focus-state;
-    outline: 3px solid transparent;
-  }
-
-  &:active:focus {
-    box-shadow: none;
-    outline: none;
-  }
 }
 
 a {
