--- a/styles/base/_forms.scss
+++ b/styles/base/_forms.scss
@@ -31,6 +31,7 @@ input[type='checkbox'] {
   align-items: center;
 
   label {
+    @extend %state-focus;
     color: $text-secondary;
     font-size: 20px;
     font-weight: 500;
