--- a/styles/settings/_utils.scss
+++ b/styles/settings/_utils.scss
@@ -1,63 +1,15 @@
-/*
-    This can be baked into the context
-    Of where the properties will be used
-*/
+@use '../settings/borders' as *;
+@use '../settings/colors' as *;
 
-/* utilities.css */
+%state-focus {
+  &:focus {
+    box-shadow: 0 0 0 2px $color-white, 0 0 0 4px $color-focus-state;
+    outline: 3px solid transparent;
+    border-radius: $border-radius-mid;
+  }
 
-/* spacing utilities */
-.mt-1 {
-    margin-top: 0.5rem;
-}
-.mt-2 {
-    margin-top: 1rem;
-}
-.mt-3 {
-    margin-top: 2rem;
-}
-
-.mb-1 {
-    margin-bottom: 0.5rem;
-}
-.mb-2 {
-    margin-bottom: 1rem;
-}
-.mb-3 {
-    margin-bottom: 2rem;
-}
-
-/* text alignment */
-.text-center {
-    text-align: center;
-}
-.text-left {
-    text-align: left;
-}
-.text-right {
-    text-align: right;
-}
-
-/* display */
-.d-block {
-    display: block;
-}
-.d-inline {
-    display: inline;
-}
-
-/* elevation utilities */
-.shadow-1 {
-    box-shadow: var(--elevation-1);
-}
-.shadow-2 {
-    box-shadow: var(--elevation-2);
-}
-.shadow-3 {
-    box-shadow: var(--elevation-3);
-}
-.shadow-4 {
-    box-shadow: var(--elevation-4);
-}
-.shadow-5 {
-    box-shadow: var(--elevation-5);
+  &:active:focus {
+    box-shadow: none;
+    outline: none;
+  }
 }
